<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_movie_title_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/title_background"
        android:text="Title Movie"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:paddingLeft="10sp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/label_movie_title"
                        android:textColor="@color/labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:textColor="@color/label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"/>
                    <TextView
                        android:text="@string/label_movie_original_title"
                        android:textColor="@color/labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_movie_original_title"
                        android:textColor="@color/label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"/>
                    <TextView
                        android:text="@string/label_movie_rating"
                        android:textColor="@color/labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_movie_rating"
                        android:textColor="@color/label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"/>
                    <TextView
                        android:text="@string/label_movie_release_date"
                        android:textColor="@color/labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:textColor="@color/label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/label_movie_overview"
                android:textColor="@color/labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/tv_movie_overview"
                android:textColor="@color/label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"/>
            <Button
                android:layout_marginLeft="10sp"
                android:padding="10sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favorite_button"
                android:text="@string/label_action_favorite"/>
            <TextView
                android:layout_marginTop="20sp"
                android:textColor="@color/labels"
                android:text="@string/label_movie_trailers"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_movie_trailers"/>
            <android.support.v7.widget.RecyclerView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/recyclerview_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/labels"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_movie_reviews"
                android:text="@string/label_movie_reviews"/>
            <android.support.v7.widget.RecyclerView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/recyclerview_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>